syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.polyana;

service PixKeymanagerGrpcService {
  rpc cadastrar (PixRequest) returns (PixResponse) {}
}

enum  TipoChave {
  CHAVE_DESCOHECIDA = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message PixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message PixResponse {
  string clienteId = 1;
  string pixId = 2;
}